<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo_list_categoria"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:src="@color/colorPrimary"
                android:contentDescription="@string/image_list_categoria"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:id="@+id/nombre_list_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_list_categoria"/>

                <TextView
                    android:id="@+id/direccion_list_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion_list_categoria"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp"
                android:layout_weight="5">

                <ImageButton
                    android:id="@+id/btn_image_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/btn_image_message"/>

                <ImageButton
                    android:id="@+id/btn_image_numero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/btn_image_numero"/>

                <ImageButton
                    android:id="@+id/btn_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_view"
                    android:background="@color/colorTransparent"
                    android:contentDescription="@string/btn_image_view"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>