<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_principal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/image_principal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/icono_principal"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/icono_principal"/>

                <TextView
                    android:id="@+id/nombre_categoria_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombre_categoria"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>